SERVER-86310 Make aggregate with $addFields respect $meta: "recordId" (#41956)

GitOrigin-RevId: cf9407c367c9cc3a5ca364b73b3e9cd3403c8909